dr added. not tested yet
